--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,14 @@
 	</div>
 </section>
 
+<section class="make">
+	<div class="make__inner container">
+		<h3 class="make__title">We make real estate investing Easy</h3>
+		<p class="make__text">Viverra ipsum dolor, sit amet consectetur adipisicing elit. Beatae dolorum nulla explicabo, facere fuga distinctio, aspernatur</p>
+		<a class="make__button" href="./">Get started</a>
+	</div>
+</section>
+
 <section class="spaces">
 	<div class="container">
 		<div class="spaces__inner">
@@ -131,6 +139,80 @@
 	</div>
 </section>
 
+<section class="featured">
+	<div class="featured__inner container">
+			<div class="featured__side">
+				<h3 class="featured__title">Featured Property</h3>
+				<p class="featured__text">Viverra ipsum dolor, sit amet consectetur adipisicing elit. Beatae dolorum nulla explicabo, facere fuga distinctio, aspernatur voluptates consequuntur et harum ducimus veniam esse incidunt recusandae asperiores iusto corporis totam mollitia quaerat</p>
+				<div class="featured__tags">
+					<a href="./">Washington (90)</a>
+					<a href="./">Springfield (57)</a>
+					<a href="./">Bristol (39)</a>
+					<a href="./">Clinton (64)</a>
+					<a href="./">Georgetown (64)</a>
+					<a href="./">Franklin (75)</a>
+				</div>
+				<a class="featured__button" href="./">View all property</a>
+			</div>
+			<div class="featured__slider slider-3 swiper-container">
+				<div class="swiper-wrapper">
+					<div class=" slider-3__item swiper-slide">
+						<div class="slider-3__image"><img src="./images/image_3.png" alt=""></div>
+						<div class="slider-3__bottom">
+							<h4 class="slider-3__title">Selway Apartments</h4>
+							<div class="slider-3__info">
+								<span>540 Sq m &nbsp; / &nbsp; 3 Bedroom</span>
+								<span>2 Barth &nbsp; / &nbsp; 1 Garage</span>
+							</div>
+							<div class="slider-3__price">Price: <span>$550,000</span></div>
+						</div>
+					</div>
+					<div class=" slider-3__item swiper-slide">
+						<div class="slider-3__image"><img src="./images/image_8.png" alt=""></div>
+						<div class="slider-3__bottom">
+							<h4 class="slider-3__title">Flamingo Apartment</h4>
+							<div class="slider-3__info">
+								<span>540 Sq m &nbsp; / &nbsp; 3 Bedroom</span>
+								<span>2 Barth &nbsp; / &nbsp; 1 Garage</span>
+							</div>
+							<div class="slider-3__price">Price: <span>$670,000</span></div>
+						</div>
+					</div>
+					<div class=" slider-3__item swiper-slide">
+						<div class="slider-3__image"><img src="./images/image_9.png" alt=""></div>
+						<div class="slider-3__bottom">
+							<h4 class="slider-3__title">Eagle Apartment</h4>
+							<div class="slider-3__info">
+								<span>540 Sq m &nbsp; / &nbsp; 3 Bedroom</span>
+								<span>2 Barth &nbsp; / &nbsp; 1 Garage</span>
+							</div>
+							<div class="slider-3__price">Price: <span>$460,000</span></div>
+						</div>
+					</div>
+				</div>
+			</div>
+	</div>
+</section>
 
+<section class="build">
+	<div class="build__inner container">
+		<h3 class="build__title">Build Advanced Sliders With A Myriad Of Options For Style And Effects</h3>
+		<div class="build__items">
+			<div class="build__item">
+				<div class="build__image"><img src="./images/image_10.png" alt=""></div>
+			</div>
+			<div class="build__item">
+				<div class="build__image"><img src="./images/image_11.png" alt=""></div>
+			</div>
+			<div class="build__item">
+				<div class="build__item-top">
+					<p>Viverra nam sem amet massa aliquot vici adipisicing Iaoreet ut. Quis aliquam aliquet amet. Ante ut etiam quam. Maecenas phasellus felis dapibus ultricies pretium ut tellus fringila.</p>
+					<a class="build__link more" href="./">View more</a>
+				</div>				
+				<div class="build__image"><img src="./images/image_12.png" alt=""></div>
+			</div>
+		</div>
+	</div>
+</section>
 
 @@include("_bottom.html")
